--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-argparse==1.2.1
-backports.ssl-match-hostname==3.4.0.2
-gunicorn==18.0
-tornado==3.2
+Pygments==1.6
+fake-factory==0.4.0
+markdown2==2.2.1
+tornado==3.2.2
